Fix products alignment

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   --ff-primary: inter;
   --ff-secondary: radley;
   --ff-tertiary: "vast shadow";
-  
+
   --ff-brand: Pacifico;
 
   --fw-100: 400;
@@ -161,11 +161,16 @@ a.button {
   display: flex;
   flex-flow: column;
   gap: var(--spacing-100);
-  text-align: justify;
+  text-align: center;
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .products article {
   padding-block: var(--spacing-300);
+  display: flex;
+  flex-flow: column;
+  gap: var(--spacing-200);
 }
 
 @media (min-width: 50rem) {
@@ -176,10 +181,23 @@ a.button {
     gap: var(--spacing-100);
   }
 
+  .products .even-columns {
+    align-items: center;
+  }
+
   .products article {
+    gap: var(--spacing-300);
+  }
+}
+
+@media (max-width: 50rem) {
+  .products .even-columns > * {
     display: flex;
     flex-flow: column;
-    gap: var(--spacing-300);
+  }
+
+  .products header {
+    max-width: 500px;
   }
 }
 
@@ -381,13 +399,9 @@ footer header .button {
   font-weight: var(--fw-400);
 }
 
-.flex-fill {
-  align-items: normal;
-}
-
 .container {
-  min-width: max(400px, 90vw);
-  max-width: 9rem;
+  min-width: max(17.5rem, 90vw);
+  max-width: 90rem;
   margin: 0 auto;
 }
 
@@ -446,8 +460,12 @@ footer header .button {
   .even-columns {
     flex-direction: column;
   }
-  
+
   .even-columns[data-reversed] {
     flex-flow: column;
+  }
+
+  .container {
+    padding-inline: var(--spacing-100);
   }
 }
